WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61959
[Qt] Fix enum order in qwebpage.h public API header
https://bugs.webkit.org/show_bug.cgi?id=61959
Summary
[Qt] Fix enum order in qwebpage.h public API header
Caio Marcelo de Oliveira Filho
Reported
2011-06-02 14:11:47 PDT
[Qt] Fix enum order in qwebpage.h public API header
Attachments
Patch
(2.18 KB, patch)
2011-06-02 14:14 PDT
,
Caio Marcelo de Oliveira Filho
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Caio Marcelo de Oliveira Filho
Comment 1
2011-06-02 14:14:08 PDT
Created
attachment 95805
[details]
Patch
Andreas Kling
Comment 2
2011-06-02 14:19:37 PDT
Comment on
attachment 95805
[details]
Patch Excellent catch, r=me
WebKit Commit Bot
Comment 3
2011-06-02 18:45:08 PDT
Comment on
attachment 95805
[details]
Patch Clearing flags on attachment: 95805 Committed
r87983
: <
http://trac.webkit.org/changeset/87983
>
WebKit Commit Bot
Comment 4
2011-06-02 18:45:12 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 5
2011-06-03 06:47:52 PDT
Revision
r87983
cherry-picked into qtwebkit-2.2 with commit 970ff13 <
http://gitorious.org/webkit/qtwebkit/commit/970ff13
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug