third_party/WebKit/Source/WebKit/qt/Api/qwebpage.cpp
@@ -174,7 +174,6 @@ static const char* editorCommandWebActions[] =
     0, // OpenImageInNewWindow,
     0, // DownloadImageToDisk,
     0, // CopyImageToClipboard,
-    0, // CopyImageUrlToClipboard,
 
     0, // Back,
     0, // Forward,
@@ -244,6 +243,10 @@ static const char* editorCommandWebActions[] =
     "AlignJustified", // AlignJustified,
     "AlignLeft", // AlignLeft,
     "AlignRight", // AlignRight,
+
+    0, // StopScheduledPageRefresh,
+
+    0, // CopyImageUrlToClipboard,
 
     0 // WebActionCount
 };
