third_party/WebKit/Source/WebKit/qt/Api/qwebpage.h
@@ -106,7 +106,6 @@ public:
         OpenImageInNewWindow,
         DownloadImageToDisk,
         CopyImageToClipboard,
-        CopyImageUrlToClipboard,
 
         Back,
         Forward,
@@ -179,6 +178,8 @@ public:
         AlignRight,
 
         StopScheduledPageRefresh,
+
+        CopyImageUrlToClipboard,
 
         WebActionCount
     };
